# pokedex-cli

./: .gitignore  AGENTS.md  INSTALL.md  README.md  UPDATE.md  chat-pokedex-cli.txt  goal.md  install.sh  pokedex-cli-architecture.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
completions/: _pokedex.zsh
docs/: README.md  architecture.md  change-gates.md  data-model.md  engineering-standards.md  evolution-uncovered.txt  infrastructure.md  installation.md  logo.md  operations.md  testing.md
docs/assets/: logo.toml
pokedex_cli/: __main__.py  animation.py  capture.py  cli.py  composition.py  display.py  inventory.py  krabby_bridge.py  paths.py  pokeapi.py  progression.py  storage.py
pokedex_cli/application/: __init__.py  activity.py  capture.py  collection.py  encounter.py  evolutions.py  hook.py  individuality.py  pokedex_catalog.py  species.py  team.py  training.py
pokedex_cli/domain/: __init__.py  capture.py  evolutions.py  identity.py  individuality.py  models.py  progression.py  rewards.py
pokedex_cli/infrastructure/: __init__.py  database.py  diagnostics.py  git_activity.py  krabby.py  legacy_inventory.py  legacy_storage.py  paths.py  pokeapi.py  pokeapi_parsing.py  repositories.py  training.py  wild_encounters.py
pokedex_cli/presentation/: __init__.py  animation.py  cli.py  display.py  game_text.py
tests/: __init__.py  conftest.py  test_animation.py  test_capture.py  test_cli.py  test_cli_commands.py  test_cli_e2e.py  test_cli_queries.py  test_display.py  test_install.py  test_inventory.py  test_logo_renderer.py  test_paths.py  test_performance.py  test_progression.py  test_startup.py  test_storage.py
tests/application/: test_activity.py  test_capture.py  test_collection.py  test_encounter.py  test_evolutions.py  test_hook.py  test_individuality.py  test_pokedex_catalog.py  test_species.py  test_species_refresh.py  test_team.py  test_training.py
tests/domain/: test_capture.py  test_evolutions.py  test_identity.py  test_individuality.py  test_models.py  test_progression.py  test_rewards.py
tests/infrastructure/: test_collection_repository.py  test_database.py  test_diagnostics.py  test_encounter_repository.py  test_git_activity.py  test_inventory_repository.py  test_krabby.py  test_pokeapi.py  test_species_cache.py  test_training_repository.py  (+1 more)
tools/: render_braille.py  render_logo.py
(+9 files in other folders)
